# cs.app

./: CMakeLists.txt  get_msb  main.cpp
chapter02/: 255_show_bytes.cpp  258_is_little_enidan.cpp  259_compose_num.cpp  260_replace_byte.cpp  261.cpp  262_shift_are_arithmetic.cpp  263_logical_shift_2_arithmetic_shift.cpp  264.cpp  265_odd_ones.cpp  266_leftmost_one.cpp  267_int_size_is_32.cpp  268_lower_one_mask.cpp  269_rotate_left.cpp  270_fits_bits.cpp  271_extract_byte.cpp  272_copy_int.cpp  273_saturating_add.cpp  274_tsub_ok.cpp  275_high_prod.cpp  276_calloc.cpp  277_shift_replace_multiply.cpp  278_divide_powerof2.cpp  279_mul3div4.cpp  280_threeforths.cpp  281_shift.cpp  284_float_le.cpp  292_float_negate.cpp  293_fioat_absva.cpp  294_float_twice.cpp  295_float_half.cpp  296_float_f2i.cpp  297_float_i2f.cpp  get_msb.cpp  test.cpp  utils.h
chapter03/: 270_proc.cpp  271_good_echo.cpp  273_find_range.cpp  274_find_range.cpp  359_store_prod.s  test1.cpp
chapter04/: 447_swap.cpp
chapter05/: 517_memset.cpp  518_ployh.cpp  519_psum.cpp
chapter06/: 645_transpose.cpp
